--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100..900&display=swap');
+@import 'bootstrap-icons/font/bootstrap-icons.css';
 
 @tailwind base;
 @tailwind components;
